implemented NestedScrollView with horizontal and vertical scrolling

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Android">
         <activity
-            android:name=".figmaToApp"
+            android:name=".ScrollActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity
+            android:name=".figmaToApp"
+            android:exported="false"/>
 
         <activity
             android:name=".LearnFragment"
-            android:exported="false">
-</activity>
+            android:exported="false"/>
         <activity
             android:name=".ConstraintActivity"
             android:exported="false" />
